--- a/css/main.css
+++ b/css/main.css
@@ -102,18 +102,208 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/*---------------Header and footer base styles-------------*/
+
+header,
+footer {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+
+}
+
+header {
+    padding: 15px 0;
+}
+
+header .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+
+}
+
+.header-divider{
+
+    width: 100%;
+    height: 1px;
+    margin: 10px 0 20px 0;
+}
+
+header nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+    width: 60%;
+
+}
+ header nav ul {
+     display: flex;
+     justify-content: space-around;
+     width: 100%;
+ } 
+
+ footer{
+     flex-direction: column;
+ }
+
+ footer p {
+     margin: 0;
+ }
+
+
+footer .content-wrapper {
+
+    width: 55%;
+    margin: 50 px 0;
+}
+
+footer .contact {
+
+    margin-bottom: 50px;
+}
+
+ footer .social-icons {
+     display:flex;
+     justify-content: space-around;
+     align-items: center;
+ }
+
+
+ footer .social-icons p {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+
+ }
+
+ footer .copyright {
+
+    margin: 20px 0;
+ }
+
+ /* ---------Mobile styles hopepage-------*/
+ /* hero area*/
+
+.hero-area {
+    display:flex;
+    justify-content: center;
+    flex-flow: row wrap;
+
+}
+
+/*aside*/
+
+aside{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+/*features*/
+
+.features {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+.features h2 {
+
+    margin-bottom: 60%;
+}
+
+.features article {
+
+    width:55%;
+    margin: 30px 0;
+}
 
 
 
+.features .features-item-description{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+
+}
+
+.fetures p {
+
+    margin:0;
+}
+
+/*reviews*/
+
+.reviews {
+
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+.reviews h2 {
+
+    margin-bottom: 40px;
+}
+
+.reviews h3 {
+
+    width: 55%;
+    margin:20px, 0;
+}
 
 
+/*about page*/
 
+.mission {
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
+.contact-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
+.contact-section p {
+    margin: 0;
+}
 
+/*faq page*/
 
+.faq {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
+.faq .content-wrapper{
+    margin: 50px 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.faq h2 {
+    margin-bottom: 40px;
+  }
+  
+  .faq-content {
+    margin-bottom: 50px;
+  }
 
 
 
@@ -178,7 +368,85 @@ textarea {
 /*
 * Clearfix: contain floats
 *
-* For modern browsers
+* F
+
+.feature-item
+.features-item-description {
+
+align-items: center;
+
+}
+
+
+ }
+.mission.h1 {
+
+align-items: flex-star
+
+
+ /* ==========================================================================
+   Helper classes
+   ========================================================================== */
+
+/*
+ * Hide visually and from screen readers
+ */
+
+ .hidden {
+    display: none !important;
+  }
+  
+  /*
+  * Hide only visually, but have it available for screen readers:
+  * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+  *
+  * 1. For long content, line feeds are not interpreted as spaces and small width
+  *    causes content to wrap 1 word per line:
+  *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+  */
+  
+  .visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap; /* 1 */
+  }
+  
+  /*
+  * Extends the .visuallyhidden class to allow the element
+  * to be focusable when navigated to via the keyboard:
+  * https://www.drupal.org/node/897638
+  */
+  
+  .visuallyhidden.focusable:active,
+  .visuallyhidden.focusable:focus {
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
+    white-space: inherit;
+  }
+  
+  /*
+  * Hide visually and from screen readers, but maintain layout
+  */
+  
+  .invisible {
+    visibility: hidden;
+  }
+  
+  /*
+  * Clearfix: contain floats
+  *
+  * For modern browsers
+  * 1or modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
